# raygrass

./: .gitignore  .pre-commit-config.yaml  001_scene.markdown  Cargo.toml  movie.rb
src/: bvh.rs  camera.rs  cli.rs  color.rs  config.rs  hittable.rs  light.rs  main.rs  perlin.rs  ray.rs  scene.rs  texture.rs
src/camera/: mod.rs
src/cli/: mod.rs
src/color/: mod.rs
src/film/: mod.rs
src/geometry/: mod.rs
src/geometry/point/: mod.rs
src/geometry/unit/: mod.rs
src/geometry/vector/: mod.rs
src/hittable/: mod.rs
src/light/: mod.rs
src/material/: mod.rs
src/object/: mod.rs
src/object/plane/: mod.rs
src/object/sphere/: mod.rs  test.rs
src/ray/: mod.rs
src/scene/: mod.rs
src/vector/: mod.rs
tools/: flames  profile
