[package]
name = "raygrass"
version = "0.1.0"
authors = ["Simon Coffey <simon@urbanautomaton.com>"]
edition = "2018"
description = "A terrible rust version of pbrt"

[dependencies]
image = "0.21.1"
num-complex = "0.2.1"
rand = "0.7.0-pre.1"
rand_xoshiro = "*"
indicatif = "0.11.0"
rayon = "1.0.3"
clap = "2.33.0"

[profile.release]
debug = true
