[package]
name = "raygrass"
version = "0.1.0"
authors = ["Simon Coffey <simon@urbanautomaton.com>"]
edition = "2018"
description = "A terrible rust version of pbrt"

[dependencies]
image = "0.23.14"
num-complex = "0.4.0"
rand = "0.8.4"
rand_xoshiro = "*"
indicatif = "0.16.2"
rayon = "1.5.1"
clap = "2.33.3"

[profile.release]
debug = true
